# tracks

./: .gitignore  LICENSE  README.md  pyproject.toml  start_valhalla.sh
examples/: gta_to_401_truck_stop.py
tracks/: __main__.py  cli.py  gps_partition.py  interpolator.py  noise.py  parking.py  partition_cli.py  random_trip.py  speed_profile.py  visualize.py
tracks/generate/: __init__.py  cli.py  models.py  router.py  trace.py
tracks/partition/: __init__.py  classify.py  tiles.py  writer.py
